--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,23 +2,55 @@
 <html>
 <head>
   <title>TwiterCom</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<div class="navbar navbar-default navbar-fixed-top shadow">
+  <div class="container">
+    <div class="navbar-header">
+      <img class="icon_bird" src="img/twitter_bird_icon.png">
+    </div>
+  </div>
+</div>
+
 <p class="notice"><%= notice %></p>
+
 <p class="alert"><%= alert %></p>
 
-<% if user_signed_in? %>
-    <span>Здравствуйте, <%= current_user.email %></span>
-    <%= link_to 'Выйти', destroy_user_session_path, :method => :delete %>
-<% else %>
-    <%= link_to 'Войти', new_user_session_path %> или <%= link_to 'Зарегистрироваться', new_user_registration_path %>
-<% end %>
-
 <%= yield %>
-
-
+<div class="container-full content">
+  <div class="row">
+    <div class="footer">
+      <div class="col-md-12 col-md-offset-6">
+        <ul class="list-inline">
+          <li><a href="/about">About</a></li>
+          <li><a href="//support.twitter.com">Help</a></li>
+          <li><a href="https://blog.twitter.com">Blog</a></li>
+          <li><a href="http://status.twitter.com">Status</a></li>
+          <li><a href="https://about.twitter.com/careers">Jobs</a></li>
+          <li><a href="/tos">Terms</a></li>
+          <li><a href="/privacy">Privacy</a></li>
+          <li><a href="//support.twitter.com/articles/20170514">Cookies</a></li>
+          <li><a href="//support.twitter.com/articles/20170451">Ads info</a></li>
+          <li><a href="//about.twitter.com/press/brand-assets">Brand</a></li>
+          <li><a href="//ads.twitter.com/start?ref=gl-tw-tw-twitter-advertise">Advertise</a></li>
+          <li><a href="https://business.twitter.com">Businesses</a></li>
+          <li><a href="//media.twitter.com">Media</a></li>
+          <li><a href="//dev.twitter.com">Developers</a></li>
+          <li><a href="/i/directory/profiles">Directory</a></li>
+          <li><span class="copyright">&copy; 2014 Twitter</span></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="../../dist/js/bootstrap.min.js"></script>
 </body>
 </html>
