--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,30 +14,40 @@
 
         <div class="left" role="navigation">
           <ul class="list-inline">
-            <li class="" data-global-action="home">
-              <a class="" data-placement="bottom" href="/" data-component-term="home_nav" data-nav="home">
-                <span class="icon iconHome">Home</span>
+            <li data-global-action="home">
+              <a class="" data-placement="bottom" href="/home" data-component-term="home_nav" data-nav="home">
+                <div class="icon iconHome">
+                  <div class="iconText">Home</div>
+                </div>
               </a>
             </li>
             <li class="people notifications" data-global-action="connect">
-              <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="/i/notifications"
+              <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="/##"
                  data-component-term="connect_nav" data-nav="connect">
-                <span class="icon iconDiscover">Notification</span>
+                <div class="icon iconNotifications">
+                  <div class="iconText">Notification</div>
+                </div>
                 <!--<span class="count">-->
                 <!--<span class="count-inner">0</span>-->
                 <!--</span>-->
               </a>
             </li>
             <li class="topics" data-global-action="discover">
-              <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="/i/discover"
+              <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="/###"
                  data-component-term="discover_nav" data-nav="discover">
-                <span class="icon iconDiscover">Discover</span>
+                <!--<span class="icon iconDiscover">Discover</span>-->
+                <div class="icon iconDiscover">
+                  <div class="iconText">Discover</div>
+                </div>
               </a>
             </li>
             <li class="profile" data-global-action="profile">
-              <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="/seruy1993"
+              <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="/####"
                  data-component-term="profile_nav" data-nav="profile">
-                <span class="icon iconProfile">Me</span>
+                <!--<span class="icon iconProfile">Me</span>-->
+                <div class="icon iconProfile">
+                  <div class="iconText">Me</div>
+                </div>
               </a>
             </li>
           </ul>
@@ -54,7 +64,7 @@
 
         <ul class="list-inline">
           <li>
-            <span class="icon iconSetting" data-toggle="tooltip" data-placement="bottom" title="Личное сообщения"></span>
+            <span class="icon iconMessage" data-toggle="tooltip" data-placement="bottom" title="Личное сообщения"></span>
           </li>
           <li>
             <div class="dropdown">
@@ -72,7 +82,7 @@
           </li>
 
           <li>
-            <button class="btn" data-toggle="modal" onclick="showAllert()">
+            <button class="btn btntwet" data-toggle="modal" onclick="showAllert()">
               <span class="Icon Icon--tweet Icon--large"></span>
               <span class="visuallyhidden">Compose new Tweet</span>
             </button>
@@ -190,6 +200,17 @@
           draggable: true
       });
   }
+  $(document).ready(function(){
+
+      $('.left a').click(function(){
+
+//          alert('dasdasd');
+          $('.left .active').removeClass('active'); // remove the class from the currently selected
+          $(this).parent().addClass('active'); // add the class to the newly clicked link
+
+      });
+
+  });
 </script>
 </body>
 </html>
