--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -12,6 +12,8 @@ html body {
   border-bottom: 1px solid #e1e8ed;
   border-bottom: 1px solid rgba(0,0,0,0.05);
   min-height: 45px !important;
+  height: 35px;
+  float: left;
 }
 
 .icon {
@@ -21,35 +23,72 @@ html body {
   height: 23px;
 }
 
+.iconText {
+  color: #596771;
+  padding-top: 3px;
+}
+
 .iconHome {
-  background: url("http://localhost:3000/img/iconHome.png") no-repeat;
-  padding-left: 30px;
-  width: auto;
+  background: url("http://localhost:3000/img/iconNav.png") no-repeat 0px 0px;
+  padding-left: 25px;
+  padding-top: 0px;
+  margin-right: 30px;
+  height: 23px;
+  background-size: cover;
+  margin-top: 0px;
 }
 
 .iconHome:hover {
-  background: url("http://localhost:3000/img/iconHomeH.png") no-repeat;
+  background: url("http://localhost:3000/img/iconNavH.png") no-repeat 0px 0px;
+  height: 23px;
+  background-size: cover;
+}
+
+.iconNotifications {
+  background: url("http://localhost:3000/img/iconNav.png") no-repeat -55px 0px;
+  padding-left: 25px;
+  padding-top: 0px;
+  margin-right: 65px;
+  height: 23px;
+  background-size: cover;
+  margin-top: 0px;
+}
+
+.iconNotifications:hover {
+  background: url("http://localhost:3000/img/iconNavH.png") no-repeat -55px 0px;
+  height: 23px;
+  background-size: cover;
 }
 
 .iconDiscover {
-  background: url("http://localhost:3000/img/iconDiscover.png") no-repeat;
-  background-position-y: 1px;
-  padding-left: 30px;
-  width: auto;
+  background: url("http://localhost:3000/img/iconNav.png") no-repeat -105px 0px;
+  padding-left: 25px;
+  padding-top: 0px;
+  margin-right: 50px;
+  height: 23px;
+  background-size: cover;
+  margin-top: 0px;
 }
 
 .iconDiscover:hover {
-  background: url("http://localhost:3000/img/iconDiscoverH.png") no-repeat;
+  background: url("http://localhost:3000/img/iconNavH.png") no-repeat -105px 0px;
+  height: 23px;
+  background-size: cover;
 }
 
 .iconProfile {
-  background: url("http://localhost:3000/img/iconProfile.png") no-repeat;
-  background-position-y: -2px;
-  padding-left: 30px;
-  width: auto;
+  background: url("http://localhost:3000/img/iconNav.png") no-repeat -159px 0px;
+  padding-left: 25px;
+  padding-top: 0px;
+  margin-right: 15px;
+  height: 23px;
+  background-size: cover;
+  margin-top: 0px;
+  background-size: cover;
 }
 .iconProfile:hover {
-  background: url("http://localhost:3000/img/iconProfileH.png") no-repeat;
+  background: url("http://localhost:3000/img/iconNavH.png") no-repeat -159px 0px;
+  background-size: cover;
 }
 
 .iconBird {
@@ -60,15 +99,32 @@ html body {
   float: left;
 }
 
-.iconSetting {
-  background: url("http://localhost:3000/img/iconSetting.png") no-repeat;
-  background-position-y: -2px;
+.iconMessage {
+  background: url("http://localhost:3000/img/iconRight.png") no-repeat 0px 0px;
+  padding-right: 4px;
   padding-left: 30px;
   width: auto;
+  height: 23px;
+  background-size: cover;
+}
+
+.iconMessage:hover{
+  background: url("http://localhost:3000/img/iconRightH.png") no-repeat 0px 0px;
+  background-size: cover;
+}
+
+.iconSetting {
+  background: url("http://localhost:3000/img/iconRight.png") no-repeat -55px 0px;
+  padding-right: 4px;
+  padding-left: 30px;
+  width: auto;
+  height: 23px;
+  background-size: cover;
 }
 
 .iconSetting:hover{
-  background: url("http://localhost:3000/img/iconSettingH.png") no-repeat;
+  background: url("http://localhost:3000/img/iconRightH.png") no-repeat -55px 0px;
+  background-size: cover;
 }
 
 .icon_bird {
@@ -79,7 +135,7 @@ html body {
 
 .search {
   width: 220px;
-  margin-top: 10px;
+  margin-top: 7px;
   float: left;
 }
 
@@ -139,7 +195,7 @@ html body {
 .search-icon {
   background: url("http://localhost:3000/img/iconFind.png") no-repeat;
   position: absolute;
-  top: 20px;
+  top: 17px;
   margin-left: 190px;
   display: block;
   width: 26px;
@@ -241,6 +297,24 @@ small {
   color: white;
 }
 
+.left .list-inline li {
+  margin-left: -4px;
+  padding-right: 20px;
+  height: 45px;
+  padding-top: 10px;
+}
+
+.left .list-inline li:hover {
+  padding-right: 20px;
+  border-bottom: 4px solid #0084b4;
+  height: 45px;
+}
+
+.left .active {
+  margin-left: 5px;
+  border-bottom: 4px solid #0084b4;
+}
+
 .footer {
   margin-top: 120px;
   color: white;
@@ -258,6 +332,13 @@ small {
   color: white;
 }
 
-.bootstrap-dialog .modal-header.bootstrap-dialog-draggable {
-  cursor: move;
+.btntwet {
+  color: #fff;
+  cursor: pointer;
+  height: 32px;
+  width: 32px;
+  margin-top: -15px;
+  margin-right: 0;
+  opacity: 1;
+  padding: 0 7px 0 8px;
 }
