--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,72 +5,72 @@
   <title></title>
 </head>
 <body>
+<div class="global">
+  <div class="container">
 
-<div class="container">
+    <div class="mainProfile col-md-3 nopadding">
 
-  <div class="mainProfile col-md-3 nopadding">
+      <div class="head">
 
-    <div class="head">
-
-    </div>
-
-    <div class="main">
-      <ul class="list-inline">
-        <li class="">
-          <a class="" title="173 Tweets" href="/seruy1993" data-element-term="tweet_stats">
-            <span class="">Tweets</span>
-            <span class="" data-is-compact="false">173</span>
-          </a>
-        </li>
-        <li class="">
-          <a class="" title="5 Following" href="/following" data-element-term="follower_stats">
-            <span class="">Following</span>
-            <span class="" data-is-compact="false">5</span>
-          </a>
-        </li>
-        <li class="">
-          <a class="" title="8 Followers" href="/followers" data-element-term="following_stats">
-            <span class="DashboardProfileCard-statLabel u-block">Followers</span>
-            <span class="DashboardProfileCard-statValue" data-is-compact="false">8</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="newTweet">
-      <div class="form-group">
-        <!--<input type="text" class="form-control">-->
-        <textarea class="form-control" rows="1" id="taForTweet"></textarea>
       </div>
+
+      <div class="main">
+        <ul class="list-inline">
+          <li class="">
+            <a class="" title="173 Tweets" href="/seruy1993" data-element-term="tweet_stats">
+              <span class="">Tweets</span>
+              <span class="" data-is-compact="false">173</span>
+            </a>
+          </li>
+          <li class="">
+            <a class="" title="5 Following" href="/following" data-element-term="follower_stats">
+              <span class="">Following</span>
+              <span class="" data-is-compact="false">5</span>
+            </a>
+          </li>
+          <li class="">
+            <a class="" title="8 Followers" href="/followers" data-element-term="following_stats">
+              <span class="DashboardProfileCard-statLabel u-block">Followers</span>
+              <span class="DashboardProfileCard-statValue" data-is-compact="false">8</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="newTweet">
+        <div class="form-group">
+          <!--<input type="text" class="form-control">-->
+          <textarea class="form-control" rows="1" id="taForTweet"></textarea>
+        </div>
+      </div>
+
+    </div>
+
+    <!--<div class="mainTwends ">-->
+    <!--<span>Twends</span>-->
+    <!--</div>-->
+
+    <div class="mainTweets col-md-6">
+      <div class="tweetsHead col-md-12">
+        <h2>Tweets</h2>
+      </div>
+
+      <div class="content col-md-12">
+        <div class="tweet">Content</div>
+        <div class="tweet">Content</div>
+        <div class="tweet">Content</div>
+        <div class="tweet">Content</div>
+      </div>
+
+
+    </div>
+
+    <div class="col-md-3">
+      <span>zzz</span>
     </div>
 
   </div>
-
-  <!--<div class="mainTwends ">-->
-  <!--<span>Twends</span>-->
-  <!--</div>-->
-
-  <div class="mainTweets col-md-6">
-    <div class="tweetsHead col-md-12">
-      <h2>Tweets</h2>
-    </div>
-
-    <div class="content col-md-12">
-      <div class="tweet">Content</div>
-      <div class="tweet">Content</div>
-      <div class="tweet">Content</div>
-      <div class="tweet">Content</div>
-    </div>
-
-
-  </div>
-
-  <div class="col-md-3">
-    <span>zzz</span>
-  </div>
-
 </div>
-
 <script>
     $(document).ready(function () {
 //        $('#taForTweet').click(function () {
