--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,6 +3,9 @@
     <div class="info col-md-4 col-md-offset-3">
       <h1>Welcome to Twitter.</h1>
 
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+
       <p class="lead">Connect with your friends — and other fascinating people. Get in-the-moment updates on the things
         that interest you. And watch events unfold, in real time, from every angle.</p>
 
