--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,2 +1,2 @@
-<h1>Users#profile</h1>
-<p>Find me in app/views/users/profile.html.erb</p>
+<h1>User name</h1>
+<p><%= @current_user.fullname %></p>
