--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
               </a>
             </li>
             <li class="profile" data-global-action="profile">
-              <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="/####"
+              <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="<%=current_user.fullname %>"
                  data-component-term="profile_nav" data-nav="profile">
                 <!--<span class="icon iconProfile">Me</span>-->
                 <div class="icon iconProfile">
@@ -161,32 +161,6 @@
 
 <%= yield %>
 
-<div class="footer">
-  <div class="container-full">
-    <div class="row">
-      <div class="center">
-        <ul class="list-inline">
-          <li><a href="/about">About</a></li>
-          <li><a href="//support.twitter.com">Help</a></li>
-          <li><a href="https://blog.twitter.com">Blog</a></li>
-          <li><a href="http://status.twitter.com">Status</a></li>
-          <li><a href="https://about.twitter.com/careers">Jobs</a></li>
-          <li><a href="/tos">Terms</a></li>
-          <li><a href="/privacy">Privacy</a></li>
-          <li><a href="//support.twitter.com/articles/20170514">Cookies</a></li>
-          <li><a href="//support.twitter.com/articles/20170451">Ads info</a></li>
-          <li><a href="//about.twitter.com/press/brand-assets">Brand</a></li>
-          <li><a href="//ads.twitter.com/start?ref=gl-tw-tw-twitter-advertise">Advertise</a></li>
-          <li><a href="https://business.twitter.com">Businesses</a></li>
-          <li><a href="//media.twitter.com">Media</a></li>
-          <li><a href="//dev.twitter.com">Developers</a></li>
-          <li><a href="/i/directory/profiles">Directory</a></li>
-          <li><span class="copyright">&copy; 2014 Twitter</span></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
