--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -81,5 +81,31 @@
     </div>
   </div>
 
+  <div class="footer">
+    <div class="container-full">
+      <div class="row">
+        <div class="center">
+          <ul class="list-inline">
+            <li><a href="/about">About</a></li>
+            <li><a href="//support.twitter.com">Help</a></li>
+            <li><a href="https://blog.twitter.com">Blog</a></li>
+            <li><a href="http://status.twitter.com">Status</a></li>
+            <li><a href="https://about.twitter.com/careers">Jobs</a></li>
+            <li><a href="/tos">Terms</a></li>
+            <li><a href="/privacy">Privacy</a></li>
+            <li><a href="//support.twitter.com/articles/20170514">Cookies</a></li>
+            <li><a href="//support.twitter.com/articles/20170451">Ads info</a></li>
+            <li><a href="//about.twitter.com/press/brand-assets">Brand</a></li>
+            <li><a href="//ads.twitter.com/start?ref=gl-tw-tw-twitter-advertise">Advertise</a></li>
+            <li><a href="https://business.twitter.com">Businesses</a></li>
+            <li><a href="//media.twitter.com">Media</a></li>
+            <li><a href="//dev.twitter.com">Developers</a></li>
+            <li><a href="/i/directory/profiles">Directory</a></li>
+            <li><span class="copyright">&copy; 2014 Twitter</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
