--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -41,7 +41,7 @@
         <%= form_tag 'addTweet', :class => 'form-signin form-horizontal' do %>
             <div class="form-group">
               <div class="col-md-12">
-                <%= text_area :tweet, params[:tweet], class: 'form-control', rows: '1', id: 'taForTweet'%>
+                <%= text_area :tweet, params[:tweet], class: 'form-control', rows: '1', id: 'taForTweet' %>
               </div>
             </div>
             <%= submit_tag 'addTweet', class: 'btn btn-primary col-sm-offset-4' %>
@@ -58,9 +58,11 @@
       <div class="content col-md-12">
         <% @tweets.each do |tweet| %>
             <div class="tweet"><%= tweet.tweet %>
-              <span>(<%= @current_user.fullname %>)</span>
+              <span>(<%= tweet.user.fullname %>)</span>
               <%= hidden_field_tag :user_id, tweet.user_id %>
-              <a class="del" style="float: right" id=<%= tweet.id %>>del</a>
+              <% if @current_user.id == tweet.user_id %>
+                  <a class="del" style="float: right" id=<%= tweet.id %>>del</a>
+              <% end %>
             </div>
         <% end %>
       </div>
@@ -72,69 +74,44 @@
       <h3>Who to follow</h3>
       <%= hidden_field_tag :current_user_id, current_user.id %>
       <div class="col-md-12 content">
-        <button class="btn btn-default" id="8">
-          <span class="visuallyhidden">user1</span>
-        </button>
+        <% if @following_user.exists?(:user_id => current_user.id, :follow_id => 9) %>
+            <button class="btn btn-danger" id="9">
+              <span class="visuallyhidden">Petr Unfollow</span>
+            </button>
+        <% else %>
+            <button class="btn btn-primary" id="9">
+              <span class="visuallyhidden">Petr Following</span>
+            </button>
+        <% end %>
+
       </div>
 
       <div class="col-md-12 content">
-        <button class="btn btn-default">
-          <span class="">user2</span>
-        </button>
+        <% if @following_user.exists?(:user_id => current_user.id, :follow_id => 6) %>
+            <button class="btn btn-danger" id="6">
+              <span class="visuallyhidden">Sergey Unfollow</span>
+            </button>
+        <% else %>
+            <button class="btn btn-primary" id="6">
+              <span class="visuallyhidden">Sergey Following</span>
+            </button>
+        <% end %>
       </div>
       <div class="col-md-12 content">
-        <button class="btn btn-default">
-          <span class="">user3</span>
-        </button>
+        <% if @following_user.exists?(:user_id => current_user.id, :follow_id => 8) %>
+            <button class="btn btn-danger" id="8">
+              <span class="visuallyhidden">Test Unfollow</span>
+            </button>
+        <% else %>
+            <button class="btn btn-primary" id="8">
+              <span class="visuallyhidden">Test Following</span>
+            </button>
+        <% end %>
       </div>
     </div>
 
   </div>
 </div>
-<script>
-    $(document).ready(function () {
-
-        $('#taForTweet').addClass('no-expand');
-
-        $('#taForTweet').focusin(function () {
-            $('#taForTweet').attr('rows', '4')
-        });
-        $('#taForTweet').blur(function() {
-            $('#taForTweet').attr('rows', '1')
-        });
-
-
-        $('a.del').click(function () {
-            var id_tweet = $(this).attr('id');
-
-            $.ajax({
-                url: "http://localhost:3000/delTweet",
-                method: "DELETE",
-                data: {params: id_tweet},
-                complete: function (msg) {
-                    if (msg.responseText == 'deleted') {
-                        $(location).attr('href', $(location).attr('href'));
-                    }
-                }
-            })
-        });
-
-        $('button.btn-default').click(function () {
-            var user_id = $('#current_user_id').val();
-            var following_id = $(this).attr('id');
-            $.ajax({
-                url: "http://localhost:3000/follow",
-                method: "POST",
-                data: {user: user_id, follow: following_id},
-                complete: function (msg) {
-                    alert(msg.responseText)
-                }
-            })
-        })
-
-    });
-
-</script>
 
 </body>
 </html>
