--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -12,10 +12,11 @@ textarea.no-expand {
 
 .global {
   background: #C0DEED url("http://localhost:3000/img/bg.png") no-repeat fixed left 40px;
-  margin-top: -17px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  margin-right: -15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .tweetsHead {
@@ -74,6 +75,71 @@ textarea.no-expand {
   background-color: #E5F2F7 !important;
   padding: 10px;
 }
+
+.mainProfile .newTweet .counter {
+  float: right;
+}
+
+.dashboardProfileCard {
+  top: 50px;
+  position: absolute;
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 3px;
+}
+
+.dashboardProfileCard .user_name {
+  position: absolute;
+  top: 20px;
+  left: 90px;
+}
+
+.dashboardProfileCard .user_name h3 a {
+  color: black;
+  cursor: pointer;
+}
+
+.dashboardProfileCard .nickname {
+  position: relative;
+  left: 90px;
+  top: -20px;
+  font-size: 12px;
+  color: #66757f;
+}
+
+.user_info {
+  color: #8c9ca9;
+  top: 40px;
+  position: relative;
+}
+
+.user_info .span {
+  color: #8c9ca9;
+  font-size: 10px;
+  letter-spacing: .02em;
+  text-transform: uppercase;
+}
+
+.user_info .value {
+  display: block;
+  font-size: 18px;
+}
+
+.user_info ul li a:hover {
+  text-decoration: none;
+  color: #3B94D9;
+}
+
+.user_info .hover {
+  color: #3B94D9;
+}
+
+.dashboardProfileCard img {
+  border-radius: 5px;
+  height: 70px;
+  width: 70px;
+}
+
 h3 {
   color: #66757f;
   font-size: 20px;
@@ -92,4 +158,75 @@ h3 {
 .follow .content {
   padding: 10px;
   margin-top: 0;
+}
+
+
+.profile{
+  background: #f5f8fa!important;
+}
+
+.profile .head{
+  background-color: #3B94D9 !important;
+  position: relative;
+  height: 175px;
+  top: 45px;
+}
+
+.profile .appContainer {
+  position: relative;
+  background-color: #fff;
+  height: 60px;
+  top: 45px;
+
+}
+
+.profile .nav {
+  height: 60px;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-bottom: 0 solid;
+  display: block;
+  line-height: 1;
+  padding: 14px 15px 7px;
+}
+
+.profile .nav .label,.value {
+  display: block;
+  text-align: center;
+}
+
+.profile .nav .label {
+  color: #66757f;
+  font-size: 11px;
+  letter-spacing: .02em;
+  text-transform: uppercase;
+}
+
+.profile .nav .value {
+  font-size: 18px;
+  padding-top: 3px;
+  font-weight: 500;
+}
+
+.btn-follow {
+  padding: 7px;
+  margin-top: 10px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.btn-edit {
+  padding: 7px;
+  margin-top: 10px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.tweets {
+  height: 700px;
+}
+
+.profile .tweets .top {
+  position: relative;
+  top: 45px;
 }
