--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,8 @@
 </head>
 <body>
 <div class="global">
-  <div class="container">
+
+  <div class="container" style="margin-top: 100px">
 
     <div class="mainProfile col-md-3 nopadding">
 
@@ -15,26 +16,42 @@
       </div>
 
       <div class="main">
-        <ul class="list-inline">
-          <li class="">
-            <a class="" title="173 Tweets" href="/seruy1993" data-element-term="tweet_stats">
-              <span class="">Tweets</span>
-              <span class="" data-is-compact="false">173</span>
-            </a>
-          </li>
-          <li class="">
-            <a class="" title="5 Following" href="/following" data-element-term="follower_stats">
-              <span class="">Following</span>
-              <span class="" data-is-compact="false">5</span>
-            </a>
-          </li>
-          <li class="">
-            <a class="" title="8 Followers" href="/followers" data-element-term="following_stats">
-              <span class="DashboardProfileCard-statLabel u-block">Followers</span>
-              <span class="DashboardProfileCard-statValue" data-is-compact="false">8</span>
-            </a>
-          </li>
-        </ul>
+
+        <div class="dashboardProfileCard">
+          <a href="/<%= current_user.fullname %>">
+            <img src="/img/default_profile.png">
+          </a>
+
+          <div class="user_name">
+            <h3><a>Цибульський</a></h3>
+          </div>
+          <div class="nickname">
+            <h6>@seruy1993</h6>
+          </div>
+        </div>
+
+        <div class="user_info">
+          <ul class="list-inline nomargin">
+            <li class="col-md-4 nomargin">
+              <a class="" title="173 Tweets" href="/seruy1993" data-element-term="tweet_stats">
+                <span class="span">Tweets</span>
+                <span class="value">173</span>
+              </a>
+            </li>
+            <li class="col-md-4 nomargin">
+              <a class="" title="5 Following" href="/following" data-element-term="follower_stats">
+                <span class="span">Following</span>
+                <span class="value">5</span>
+              </a>
+            </li>
+            <li class="col-md-4 nomargin">
+              <a class="" title="8 Followers" href="/followers" data-element-term="following_stats">
+                <span class="span">Followers</span>
+                <span class="value">8</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
 
       <div class="newTweet">
@@ -44,7 +61,14 @@
                 <%= text_area :tweet, params[:tweet], class: 'form-control', rows: '1', id: 'taForTweet' %>
               </div>
             </div>
-            <%= submit_tag 'addTweet', class: 'btn btn-primary col-sm-offset-4' %>
+            <div class="row">
+              <div class="col-md-1 col-md-offset-5 left">
+                <h4 id="counter">140</h4>
+              </div>
+              <div class="col-md-1 col-md-offset-1">
+                <%= submit_tag 'addTweet', id: 'btn_addTweet', class: 'btn btn-primary col-sm-offset-8' %>
+              </div>
+            </div>
         <% end %>
       </div>
     </div>
@@ -66,7 +90,6 @@
             </div>
         <% end %>
       </div>
-
 
     </div>
 
