--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,2 +1,91 @@
-<h1>User Prodile</h1>
-<p><%= @user.fullname %></p>
+<div class="global">
+
+  <div class="container-full">
+
+    <div class="profile">
+      <div class="row head">
+      </div>
+
+      <div class="row appContainer">
+        <div class="col-md-4 col-md-offset-4">
+          <ul class="list-inline">
+            <li class="">
+              <a class="nav" title="171 Tweets">
+                <span class="label">Tweets</span>
+                <span class="value">171</span>
+              </a>
+            </li>
+            <li class="">
+              <a class="nav" title="5 Following" data-nav="following" href="/following">
+                <span class="label">Following</span>
+                <span class="value">5</span>
+              </a>
+            </li>
+            <li class="">
+              <a class="nav" title="8 Followers" href="/followers">
+                <span class="label">Followers</span>
+                <span class="value">8</span>
+              </a>
+            </li>
+            <li class="">
+              <a class="nav" title="1 Favorite"
+                 href="/favorites">
+                <span class="label">Favorites</span>
+                <span class="value">1</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-md-1">
+          <%= hidden_field_tag :current_user_id, current_user.id %>
+
+          <% if current_user.id == @user.id %>
+            <button class="btn btn-default btn-edit">
+                <span> Edit profile</span>
+            </button>
+          <% else %>
+              <% if @following_user.exists?(:user_id => current_user.id, :follow_id => @user.id) %>
+                  <button class="btn btn-danger btn-follow" id="<%= @user.id %>">
+                    <span class="visuallyhidden">Unfollow</span>
+                  </button>
+              <% else %>
+                  <button class="btn btn-info btn-follow" id="<%= @user.id %>">
+                    <span class="visuallyhidden">Follow</span>
+                  </button>
+              <% end %>
+
+          <% end %>
+
+          <!--<span class="button-text following-text">-->
+          <!--Following-->
+          <!--</span>-->
+          <!--<span class="button-text unfollow-text">-->
+          <!--Unfollow-->
+          <!--</span>-->
+        </div>
+
+      </div>
+
+
+      <div class="row tweets">
+        <div class="mainTweets col-md-7 col-md-offset-4 top">
+          <div class="tweetsHead col-md-7">
+            <h2>Tweets</h2>
+          </div>
+          <div class="content col-md-7">
+            <% @tweets.each do |tweet| %>
+                <div class="tweet"><%= tweet.tweet %>
+                  <span>(<%= tweet.user.fullname %>)</span>
+                  <%= hidden_field_tag :user_id, tweet.user_id %>
+                  <a class="del" style="float: right" id=<%= tweet.id %>>del</a>
+                </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
